--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ egui = "0.32.3"
 
 screenshots = "0.8.10"
 
-reqwest = { version = "0.12.23", features = ["json"] }
 tokio = { version = "1.47.1", features = ["full"] }
 
 serde = { version = "1.0.226", features = ["derive"] }
@@ -24,3 +23,5 @@ thiserror = "2.0.16"
 chrono = { version = "0.4.42", features = ["serde"] }
 tracing = "0.1.41"
 dirs = "6.0.0"
+
+gemini-rs = "2.0.0"
