--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 eframe = "0.32.3"
 egui = "0.32.3"
 
-screenshots = "0.8.10"
+xcap = "0.7.1"
 
 tokio = { version = "1.47.1", features = ["full"] }
 
@@ -23,5 +23,6 @@ thiserror = "2.0.16"
 chrono = { version = "0.4.42", features = ["serde"] }
 tracing = "0.1.41"
 dirs = "6.0.0"
+fs_extra = "1.3.0"
 
-gemini-rs = "2.0.0"
+gemini-rust = "1.4.0"
